--- a/src/css/main.css
+++ b/src/css/main.css
@@ -48,9 +48,9 @@ main .edit-icon:hover{
     opacity: 0.5;
 }
 
-aside form input:not([type="checkbox"]),
-aside form textarea,
-aside form button{
+ form input:not([type="checkbox"]),
+ form textarea,
+ form button{
 
     width: 90%;
     padding: 15px 5%;
@@ -63,16 +63,16 @@ aside form button{
     font-size: 15px;
 }
 
-aside form input[type="checkbox"]{
+ form input[type="checkbox"]{
     margin:  10px;
 }
 
-aside form button{
+ form button{
     width: 100%;
     cursor: pointer;
     transition: transform 500ms ease;
 }
 
-aside form button:hover{
+ form button:hover{
     transform: scale(1.1);
 }
